--- a/dockerfile-jupyter
+++ b/dockerfile-jupyter
@@ -5,9 +5,10 @@ ARG SPARK_MEASURE_URL="https://repo1.maven.org/maven2/ch/cern/sparkmeasure/"\
 "spark-measure_2.12/0.24/spark-measure_2.12-0.24.jar"
 
 RUN wget -P ${JARS_LOCAL_DIR} ${SPARK_MEASURE_URL} &&\
-    pip install --no-cache-dir findspark sparkmeasure
+    pip install --no-cache-dir findspark sparkmeasure &&\
+    pip install ipykernel
 
 ENV PYSPARK_PYTHON=/opt/bitnami/python/bin/python
 
-CMD ["jupyter-notebook", "--NotebookApp.token=''", "--ip=0.0.0.0", \
+CMD ["jupyter-lab", "--NotebookApp.token=''", "--ip=0.0.0.0", \
 "--port=8888", "--no-browser", "--allow-root", "--notebook-dir=/home/jovyan/work"]
