Ajustes gerais para rodar pyspark no python local ou standalone

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,9 @@
 {
     "name": "Dev Spark Jupyter",
-    "dockerComposeFile": "../docker-compose.yaml",
+    "dockerComposeFile": [
+        "../docker-compose.yaml",
+        "./docker-compose.override.yaml"
+    ],
     "service": "jupyter",
     "workspaceFolder": "/home/jovyan/work",
     "customizations": {
