--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,3 @@
-version: '3.8'
-
-# Definindo variáveis de ambiente comuns dentro de args
 x-common-args:
   &common-args
     USER_NAME: ${USER_NAME}
@@ -49,13 +46,13 @@ services:
     image: dev-spark-jupyter-pyspark:3.5.1
     environment:
       - SPARK_MODE=history-server
-      - SPARK_HISTORY_OPTS=-Dspark.history.fs.logDirectory=/opt/bitnami/spark/logs
+      - SPARK_HISTORY_OPTS=-Dspark.history.fs.logDirectory=${USER_HOME}/logs
       - SPARK_HISTORY_FS_UPDATE_INTERVAL=10s
     ports:
       - "18080:18080"
     volumes:
       - ./logs:${USER_HOME}/logs
-    command: /bin/bash -c "/opt/spark-3.5.1-bin-hadoop3/sbin/start-history-server.sh && tail -f /opt/spark-3.5.1-bin-hadoop3/logs/*"
+    command: /bin/bash -c "/opt/spark-3.5.1-bin-hadoop3/sbin/start-history-server.sh && tail -f ${USER_HOME}/logs/*"
     depends_on:
       - spark-master
     networks:
@@ -69,7 +66,6 @@ services:
         <<: *common-args
     image: dev-spark-jupyter-pyspark:3.5.1
     # environment:
-      # Aqui você pode definir outras variáveis específicas do Jupyter, se necessário
     ports:
       - "8888:8888"
     volumes:
